cmake_minimum_required(VERSION 3.16)
project(MiraDump)

set(CMAKE_CXX_STANDARD 17)

include_directories(${CMAKE_CURRENT_LIST_DIR}/Dependencies/toml11)

FILE(GLOB_RECURSE MAIN_SOURCE CONFIGURE_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/MiraDump/*.cpp)
FILE(GLOB_RECURSE MAIN_HEADER CONFIGURE_DEPENDS ${CMAKE_CURRENT_LIST_DIR}/MiraDump/*.h)

add_executable(MiraDump ${MAIN_SOURCE} ${MAIN_HEADER})